Fixes from mobile navigation spill over.

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -92,6 +92,10 @@
 			color: $color-white !important;
 		}
 
+		@media screen and (min-width: 1050px) {
+			display: inline-block;
+		}
+
 	}
 
 }
