--- a/style-rtl.css
+++ b/style-rtl.css
@@ -76,6 +76,9 @@ Variables
     top: -4px; }
     .home .site-title span.site-description {
       color: #ffffff !important; }
+    @media screen and (min-width: 1050px) {
+      .site-title span.site-description {
+        display: inline-block; } }
 
 .site-title a:hover {
   color: #202223; }
@@ -119,43 +122,47 @@ Variables
     .menu-toggle {
       display: none; } }
 
-.main-navigation {
-  background: rgba(33, 33, 33, 0.95);
-  bottom: 0;
-  right: 0;
-  margin: 0;
-  position: absolute;
-  left: 0;
-  top: 85px; }
-  @media screen and (min-width: 600px) {
-    .main-navigation {
-      display: none; } }
+@media screen and (max-width: 1049px) {
+  .main-navigation {
+    background: rgba(33, 33, 33, 0.95);
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    position: absolute;
+    left: 0;
+    top: 85px; } }
+
+@media screen and (min-width: 600px) {
+  .main-navigation {
+    display: none; } }
+
+@media screen and (min-width: 1050px) {
+  .main-navigation {
+    background: none;
+    display: block;
+    position: relative;
+    z-index: auto; } }
+
+.main-navigation ul {
+  text-align: center; }
   @media screen and (min-width: 1050px) {
-    .main-navigation {
-      background: none;
-      display: block;
-      position: relative;
-      z-index: auto; } }
-  .main-navigation ul {
-    text-align: center; }
+    .main-navigation ul {
+      text-align: right; } }
+  .main-navigation ul li {
+    margin: 15px; }
     @media screen and (min-width: 1050px) {
-      .main-navigation ul {
-        text-align: right; } }
-    .main-navigation ul li {
-      margin: 15px; }
-      @media screen and (min-width: 1050px) {
-        .main-navigation ul li {
-          margin: 49px 12px; } }
-      .main-navigation ul li a {
-        color: #202223;
-        font-size: .9375rem;
-        font-weight: bold;
-        padding: 0;
-        text-transform: uppercase; }
-        .home .main-navigation ul li a {
-          color: #ffffff !important; }
-      .main-navigation ul li .sub-menu li {
-        margin: 12px; }
+      .main-navigation ul li {
+        margin: 49px 12px; } }
+    .main-navigation ul li a {
+      color: #202223;
+      font-size: .9375rem;
+      font-weight: bold;
+      padding: 0;
+      text-transform: uppercase; }
+      .home .main-navigation ul li a {
+        color: #ffffff !important; }
+    .main-navigation ul li .sub-menu li {
+      margin: 12px; }
 
 .site-footer {
   background-color: #212121; }
